[package]
name = "gdlauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint ="0.4.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
path = "./src/benchmark.rs"
harness = false
